feat: add create bill end point and make the endpoint documentation
