# models/bill.go
@@ -1,6 +1,11 @@
 package models
 
-import "time"
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+)
 
 type Bill struct {
 	BillID       string        `gorm:"primaryKey;type:varchar(255)" json:"billId"`
@@ -10,4 +15,9 @@ type Bill struct {
 	Creator      User          `gorm:"foreignKey:CreatorID" json:"creator"`
 	CreatedAt    time.Time     `json:"createdAt"`
 	Participants []Participant `gorm:"foreignKey:BillID" json:"participants"`
+}
+
+func (b *Bill) BeforeCreate(tx *gorm.DB) (err error) {
+	b.BillID = uuid.NewString()
+	return
 }
