# models/participant.go
@@ -2,6 +2,7 @@ package models
 
 type Participant struct {
 	ParticipantID string `gorm:"primaryKey;type:varchar(255)" json:"participantId"`
+	User          User   `gorm:"foreignKey:ParticipantID"`
 	BillID        string `gorm:"type:varchar(255)" json:"billId"`
 	AmountOwed    int    `gorm:"type:int(10)" json:"amountOwed"`
 	IsPaid        bool   `json:"isPaid"`
